@@ -1,0 +1,25 @@
+{% extends "mapentity/mapentity_detail.html" %}
+{% load i18n field_verbose_name %}
+
+{% block detailspanel %}
+    {{ block.super }}
+    <table class="table-striped table-bordered table">
+        <tr>
+            <th>{{ report|verbose:"name" }}</th>
+            <td>{{ report.name }}</td>
+        </tr>
+        <tr>
+            <th>{{ report|verbose:"email" }}</th>
+            <td>{{ report.email }}</td>
+        </tr>
+        <tr>
+            <th>{{ report|verbose:"comment" }}</th>
+            <td>{{ report.comment }}</td>
+        </tr>
+        <tr>
+            <th>{{ report|verbose:"category" }}</th>
+            <td>{{ report.category }}</td>
+        </tr>
+        {% include "mapentity/trackinfo_fragment.html" %}
+    </table>
+{% endblock detailspanel %}
